refactor id uuid and endpoints names, added views